# qc_data_preparation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: verification.yml
conf/base/: catalog.yml  globals.yml  logging.yml
conf/base/parameters/: data_processing.yml  data_science.yml  mnist_processing.yml  postprocessing.yml  preprocessing.yml  training.yml
docs/source/: conf.py  index.rst
src/: requirements.in  requirements.txt  setup.py
src/qc_data_preparation/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/qc_data_preparation/helpers/: dataset.py  types.py
src/qc_data_preparation/pipelines/data_processing/: pipeline.py
src/qc_data_preparation/pipelines/data_science/: nodes.py  pipeline.py
src/qc_data_preparation/pipelines/mnist_processing/: README.md  autoencoder.py  nodes.py  pipeline.py
src/qc_data_preparation/pipelines/postprocessing/: nodes.py  pipeline.py
src/qc_data_preparation/pipelines/preprocessing/: __init__.py  nodes.py  pipeline.py
src/qc_data_preparation/pipelines/training/: __init__.py  autoencoder.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/mnist_processing/: test_pipeline.py
