[tool.kedro]
package_name = "qc_data_preparation"
project_name = "qc_data_preparation"
kedro_init_version = "0.18.10"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/qc_data_preparation -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "qc-data-preparation"
version = "0.18.1"
description = ""
authors = [
    "Eileen Kuehn <eileen.kuehn@kit.edu>",
    "Melvin Strobl <melvin.strobl@kit.edu>",
    "Christof Wendenius <christof.wendenius@kit.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
kedro = "^0.18.9"
nbstripout = "^0.6.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
pytest = "^7.3.1"
tensorflow = {version = "^2.12.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = "^2.12.0", markers = "sys_platform == 'darwin'"}
tensorflow-metal = {version = "^1.0.1", markers = "sys_platform == 'darwin'"}
dill = "^0.3.6"
matplotlib = "^3.7.1"
torch = "^2.0.1"
kedro-viz = "^6.2.0"
torchmetrics = "^0.11.4"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true